# Ultreon-RAG-Chatbot

./: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml  feature_requirements.md  infodump.md  package.json
.github/workflows/: deploy-backend.yaml  pytest.yaml
app/: globals.css  page.tsx
app/api/query/: route.ts
app/documents/: page.tsx
backend/: .dockerignore  Dockerfile  config.py  engine.py  ingest.py  main.py  models.py  pyproject.toml
backend/tests/: test_rag.py
components/: page-header.tsx
lib/: documents.ts
ragchatbot/: .env.example  .gitignore  package-lock.json  requirements.txt
ragchatbot/app/: layout.tsx  page.tsx
ragchatbot/app/documents/[slug]/: page.tsx
ragchatbot/backend/: ingest.py  main.py
sample-documents/: annual-leave-policy.txt  client-onboarding-guide.txt  data-protection-policy.txt  expense-claims-procedure.txt  office-guidelines.txt
tests/: test_rag.py
